# esslivedata

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN_SLICER_PLOT.md  README.md  debug_dynamicmap_lag.py  docker-compose.dream.yml  docker-compose.yml  genindex.html  index.html  objects.inv  output.txt  plot-grid-code-review.md  pyproject.toml  roi-plot-implementation-plan.md  roi-remaining-work.md  search.html  searchindex.js  to-test.md  tox.ini
.claude/: settings.local.json
.claude/rules/: dashboard-widgets.md  dependency-updates.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml  docker.yml  release.yml
_downloads/1ed322a18191ffa0831c096e850ca5aa/: detector_data_handler.py
_sources/about/: index.md
_sources/developer/: getting-started.md  index.md
_sources/user-guide/: adding-new-instruments.md  deployment.md  index.md  services.md
_static/: documentation_options.js
about/: ess-instruments.html  index.html
api-reference/: index.html
benchmarks/: dashboard_scipp_vs_numpy.md  dashboard_scipp_vs_numpy.py
configs/: log_producer_bifrost.json  log_producer_dream.json  log_producer_dummy.json  log_producer_loki.json
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html
developer/adr/: 0001-in-process-device-stream-synthesis.html  0002-context-stream-gating-at-jobmanager.html  0003-context-input-declaration-model.html  0004-uniform-stream-name-keying.html  0005-frame-gated-session-flush.html  0006-nicos-derived-devices.html  index.html
developer/design/: backend-service-architecture.html  dashboard-architecture.html  message-flow-and-transformation.html  orchestrator-flow.html  rate-aware-batcher.html  stream-keying.html  stream-registry.html
docs/: conf.py  index.md
docs/_static/: rate_aware_batcher_overview.html  stream_keying_overview.html
docs/about/: data.py
docs/developer/: dataservice-buffering-integration.md  dependency-management.md  getting-started.md  glossary.md  index.md  testing-guide.md
docs/resources/: diagram.py
docs/user-guide/: adding-new-instruments.md  deployment.md  dream-demo.md  launcher.md  services.md
examples/: README.md  plot_grid_demo.py
plot-composition/: prototype.py
requirements/: base.in  base.txt  basetest.in  basetest.txt  ci.txt  compile_with_cooldown.py  dev.txt  docs.txt  mypy.txt  nightly.in  nightly.txt  static.txt  test.txt  wheels.txt
resources/: draw_logo.py
scripts/: README_screenshots.md  benchmark_da00_schemas.py  benchmark_result_schema.py  drive_dashboard.py  generate_widget_screenshots.py  log_producer.ipynb  migrate_workflow_ids.py  nicos_device_monitor.py  screenshot_dashboard.py  setup-kafka-topics.sh
scripts/screenshot_fixtures/: README.md  __init__.py
tests/: bifrost_test.py  conftest.py  format_version_test.py  make_geometry_nexus_test.py  message_test.py  nexus_helpers_test.py  package_test.py  parameter_models_test.py  service_factory_test.py  service_test.py
tests/benchmarks/: accumulator_bench.py
tests/config/: bifrost_wavelength_lut_test.py  chopper_wavelength_lut_test.py  config_loader_test.py  device_contract_test.py  dynamic_transforms_registry_test.py  estia_specs_test.py  grid_template_test.py  grid_templates_test.py  instrument_test.py  loki_factories_test.py  loki_wavelength_lut_test.py  models_test.py  monitor_source_names_test.py  motion_binding_test.py  registered_workflow_factories_test.py  registered_workflow_specs_test.py  roi_names_test.py  route_derivation_test.py  stream_kind_test.py  stream_test.py  streams_parsed_test.py  streams_test.py  workflow_factory_test.py  workflow_output_validation_test.py  workflow_params_test.py  workflow_roundtrip_test.py  workflow_spec_test.py  workflow_template_test.py  workflows_test.py
tests/core/: adaptive_batching_scenarios_test.py  adaptive_rate_aware_integration_test.py  command_dispatcher_test.py  gated_stream_test.py  job_manager_adapter_test.py  job_manager_test.py  job_test.py  load_shedder_test.py  message_batcher_test.py  nicos_devices_test.py  orchestrating_processor_test.py  projection_test.py  pulse_grid_test.py  rate_aware_batcher_test.py  run_transition_test.py  sciline_scheduler_test.py  stream_alias_adapter_test.py  stream_alias_test.py  timestamp_test.py
tests/dashboard/: active_job_registry_test.py  auto_start_test.py  autoscaler_test.py  browser_ui_test.py  buffer_manager_test.py  buffer_storage_unified_test.py  buffer_strategy_test.py  cell_autoscale_test.py  command_service_test.py  config_service_test.py  config_store_test.py  configuration_adapter_test.py  conftest.py  correlation_histogram_test.py  correlation_plotter_test.py  dashboard_services_test.py  data_service_benchmark.py  data_service_test.py  data_subscriber_test.py  dataarray_buffer_test.py  derived_devices_test.py  extractor_time_coords_test.py  extractors_test.py  fake_backend_test.py  fakes.py  flatten_plotter_test.py  fom_orchestrator_test.py  format_utils_test.py  (+68 more)
user-guide/: adding-new-instruments.html  deployment.html  dream-demo.html  index.html  installation.html  services.html
(+668 files in other folders)
